# crud-create-flask

./: README.md  pyproject.toml
crud_create_flask_3107/: app.py  repository.py
crud_create_flask_3107/templates/posts/: index.html  new.html  new2.html
tests/: test_app.py
